links redes sociais

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
         <div id="redes-sociais">
           <ul id="redesSociais">
             <li>
-              <a href="#linkedin" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/luis-guilherme-de-morais-abreu/" target="_blank" aria-label="LinkedIn"
               ><i class="fab fa-linkedin" id="linkedin"></i
                 ></a>
               </li>
               <li>
-                <a href="#github" aria-label="GitHub"
+                <a href="https://github.com/lguimorais" target="_blank" aria-label="GitHub"
                 ><i class="fab fa-github" id="github"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="#instagram" aria-label="Instagram"
+                  <a href="https://www.instagram.com/l.guih__/?next=%2F" target="_blank" aria-label="Instagram"
                   ><i class="fab fa-instagram" id="insta"></i
                     ></a>
                   </li>
