--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
+    <link rel="icon" type="image/svg+xml" href="logo_dev.svg">
 
     <link
       rel="stylesheet"
