--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           habilidades. Valorizo o aprendizado contínuo, o trabalho em equipe e a
           criação de soluções que gerem impacto real por meio da tecnologia.
         </p>
-      </div class = "container-projetos">
-      <div class="projetos">
-        <ul id="projetos">
+      </div >
+      <div class="container-projetos">
+        <ul class="projetos">
    
         </ul>
       </div>
