fim por enquanto

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           em backend. Tenho experiência com Java, Spring Boot, HTML, CSS e
           JavaScript, além de conhecimentos em redes, manutenção de computadores
           e sistemas Linux. Atualmente, estou aprendendo Node.js e participo
-          ativamente da LAESA, contribuindo em projetos acadêmicos e técnicos.
+          ativamente da LAESA(Liga Academica de Engenharia de Software Aplicada), contribuindo em projetos acadêmicos e técnicos.
           Tenho também projetos próprios disponíveis no meu GitHub, onde aplico
           na prática o que venho estudando e busco sempre evoluir minhas
           habilidades. Valorizo o aprendizado contínuo, o trabalho em equipe e a
