--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
-    <link rel="icon" type="image/svg+xml" href="logo_dev.svg">
+    <link rel="icon" type="image/svg+xml" href="logo_dev.svg" />
 
     <link
       rel="stylesheet"
@@ -54,61 +54,112 @@
           </div>
           <nav>
             <ul id="tecnologias">
-              <li><a href="#"><i class="devicon-javascript-plain colored" title="JavaScript"></i></a></li>
-              <li><a href="#"><i class="devicon-java-plain colored" title="Java"></i></a></li>
-              <li><a href="#"><i class="devicon-nodejs-plain colored" title="Node.js"></i></a></li>
-              <li><a href="#"><i class="devicon-spring-plain colored" title="Spring Boot"></i></a></li>
-              <li><a href="#"><i class="devicon-c-plain colored" title="C"></i></a></li>
-              <li><a href="#"><i class="devicon-github-original" title="GitHub"></i></a></li>
-              <li><a href="#"><i class="devicon-archlinux-plain colored" title="Arch Linux"></i></a></li>
-              <li><a href="#"><i class="devicon-linux-plain" title="Linux"></i></a></li>
+              <li>
+                <a href="#"
+                  ><i
+                    class="devicon-javascript-plain colored"
+                    title="JavaScript"
+                  ></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="devicon-java-plain colored" title="Java"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="devicon-nodejs-plain colored" title="Node.js"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i
+                    class="devicon-spring-plain colored"
+                    title="Spring Boot"
+                  ></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="devicon-c-plain colored" title="C"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="devicon-github-original" title="GitHub"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i
+                    class="devicon-archlinux-plain colored"
+                    title="Arch Linux"
+                  ></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="devicon-linux-plain" title="Linux"></i
+                ></a>
+              </li>
             </ul>
           </nav>
-          <div class="container-curriculo"><button type="button" id="curriculo">curriculo</button></div>
+          <div class="container-curriculo">
+            <button type="button" id="curriculo">curriculo</button>
+          </div>
         </div>
         <div id="redes-sociais">
           <ul id="redesSociais">
             <li>
-              <a href="https://www.linkedin.com/in/luis-guilherme-de-morais-abreu/" target="_blank" aria-label="LinkedIn"
-              ><i class="fab fa-linkedin" id="linkedin"></i
-                ></a>
-              </li>
-              <li>
-                <a href="https://github.com/lguimorais" target="_blank" aria-label="GitHub"
+              <a
+                href="https://www.linkedin.com/in/luis-guilherme-de-morais-abreu/"
+                target="_blank"
+                aria-label="LinkedIn"
+                ><i class="fab fa-linkedin" id="linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/lguimorais"
+                target="_blank"
+                aria-label="GitHub"
                 ><i class="fab fa-github" id="github"></i
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/l.guih__/?next=%2F" target="_blank" aria-label="Instagram"
-                  ><i class="fab fa-instagram" id="insta"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/l.guih__/?next=%2F"
+                target="_blank"
+                aria-label="Instagram"
+                ><i class="fab fa-instagram" id="insta"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
     <section class="about" id="about">
       <div id="informacoes" class="informacoes">
         <h1 id="Ola">Olá,Sou</h1>
         <h1 id="meuNome">Luis Guilherme</h1>
-        <p>Desenvolvedor Full Stack | Engenheiro de Software</p>
+        <p>Desenvolvedor back-end | Engenheiro de Software</p>
 
         <p>
           Estudante de Engenharia de Software no iCEV e desenvolvedor com foco
           em backend. Tenho experiência com Java, Spring Boot, HTML, CSS e
           JavaScript, além de conhecimentos em redes, manutenção de computadores
           e sistemas Linux. Atualmente, estou aprendendo Node.js e participo
-          ativamente da LAESA(Liga Academica de Engenharia de Software Aplicada), contribuindo em projetos acadêmicos e técnicos.
-          Tenho também projetos próprios disponíveis no meu GitHub, onde aplico
-          na prática o que venho estudando e busco sempre evoluir minhas
+          ativamente da LAESA(Liga Academica de Engenharia de Software
+          Aplicada), contribuindo em projetos acadêmicos e técnicos. Tenho
+          também projetos próprios disponíveis no meu GitHub, onde aplico na
+          prática o que venho estudando e busco sempre evoluir minhas
           habilidades. Valorizo o aprendizado contínuo, o trabalho em equipe e a
           criação de soluções que gerem impacto real por meio da tecnologia.
         </p>
-      </div >
+      </div>
       <div class="container-projetos">
-        <ul class="projetos">
-   
-        </ul>
+        <ul class="projetos"></ul>
       </div>
     </section>
     <script src="script.js"></script>
