--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div id="informacoes" class="informacoes">
         <h1 id="Ola">Olá,Sou</h1>
         <h1 id="meuNome">Luis Guilherme</h1>
-        <p>Desenvolvedor back-end | Engenheiro de Software</p>
+        <p>Desenvolvedor Back-end | Engenheiro de Software</p>
 
         <p>
           Estudante de Engenharia de Software no iCEV e desenvolvedor com foco
